--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ scikit-learn>=1.0.2
 scipy>=1.7.3
 tables>=3.7.0
 tabulate>=0.8.9
-tensorflow[and-cuda]
+tensorflow[and-cuda]==2.13.1
 wfdb>=3.4.1
 yamlhparams>=0.2.0
 yasa
